# video-vocab

./: .cursorrules  .gitignore  DOC.md  LOG.md  OBSERVATIONS.md  README.md  TODO.md  agents.md  eslint.config.js  extract_subtitles.py  find_egypt_videos.py  generate_data.py  index.html  package-lock.json  package.json  requirements.txt  tsconfig.json
crm/: README.md  pyproject.toml
crm/src/crm/: __init__.py  cli.py  course_index.py  env.py  local_translation.py  paths.py  subtitle_utils.py  transcript_utils.py
crm/src/crm/commands/: __init__.py  extract_subtitles.py  find_videos.py  generate_data.py  migrate_legacy_data.py
doc/: OLD_OBSERVATIONS.md  SUPABASE_SETUP.md  hemingway.md  practice-logic.md  redesign-pages.md
doc/features/: practicing_vocab_of_snippet.md
doc/inspiration-and-legacy/: arrayUtils.md  useLocalStorage.md
public/data/: .gitignore  index.json  videos.json
scripts/: .api.txt  0_generate_word_list.py  1_get_vocab_from_lm.py  2_convert_to_markdown.py  3_to_flashcard.py  4_generate_from_list_llm.py  5_generate_transcript_metadata.py  get_audio.py
src/: App.vue  fsrs.ts  main.ts  router.ts  shims-youtube.d.ts  types.ts
src/_legacy/: types.ts
src/app/: AppShell.vue  main.ts  router.spec.ts  router.ts
src/assets/: questions.json  videos.json  words.json
src/components/: FlashcardItem.vue
src/composables/: fsrsManager.ts  pickQuestion.ts  useData.ts
src/db/: learnerDb.ts
src/dumb/: VideoPracticeLayout.vue  videoPracticeMode.ts
src/pages/: FlashcardPracticePage.vue  VideoDetailPage.vue  VideoListPage.vue  VideoSelectorPage.vue  (+1 more)
(+139 files in other folders)
